--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         <li> <a href="2.html">CSS</a><br></li>
         <li> <a href="3.html">javaScript</a><br></li>
       </ol>
-
+<iframe width="560" height="315" src="https://www.youtube.com/embed/7T7r_oSp0SE"
+frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+allowfullscreen></iframe>
       <h2>WEB이란 무엇인가?</h2>
       <strong>웹의 다른 뜻은 다음과 같다.
 웹(web)은 기본적으로 거미줄을 뜻한다.
@@ -22,6 +24,43 @@
 웹(WEB)은 도널드 커누스가 제안한 프로그래밍 시스템이다.
 웹(Web)은 그놈 데스크톱의 웹 브라우저이다.
 월간 웹은 1998년 창간된 월간지이다.
+    </p>
+    <p>
+      <div id="disqus_thread"></div>
+<script>
+
+/**
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+/*
+var disqus_config = function () {
+this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+*/
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://web1-gydpbmlmy6.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    </p>
+    <p>
+      <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/5e58fe2ca89cda5a1888722a/default';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
     </p>
   </body>
 </html>
