--- a/2.html
+++ b/2.html
@@ -3,17 +3,26 @@
 <head>
   <title>WEB1 - CSS</title>
   <meta charset="utf-8">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
+  </script>
+<script src="color.js"></script>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
+  <input id="night_day" type="button" value="night" onclick="
+  nightdayHandler(this);
+  ">
+  <div id="grid">
   <ol>
-        <li> <a href="1.html">HTML</a><br></li>
+        <li> <a href="1.html" >HTML</a><br></li>
         <li> <a href="2.html">CSS</a><br></li>
         <li> <a href="3.html">javaScript</a><br></li>
-      </ol>
-
-      <h2>CSS이란 무엇인가?</h2>
-      <strong>HTML 등의 마크업 언어로 작성된 문서가 실제로 웹사이트에 표현되는 방법을 정해주는 언어.</strong>
-
-  </body>
+  </ol>
+    <div id="article">
+        <h2>CSS이란 무엇인가?</h2>
+        <strong>HTML 등의 마크업 언어로 작성된 문서가 실제로 웹사이트에 표현되는 방법을 정해주는 언어.</strong>
+    </div>
+  </div>
+</body>
 </html>
