--- a/index.html
+++ b/index.html
@@ -3,17 +3,23 @@
 <head>
   <title>WEB1 - WEB</title>
   <meta charset="utf-8">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
+  </script>
+<script src="color.js"></script>
 </head>
+<link rel="stylesheet" href="style.css">
 <body>
   <h1><a href="index.html">WEB</a></h1>
+  <input id="night_day" type="button" value="night" onclick="
+  nightdayHandler(this);
+  ">
+  <div id="grid">
   <ol>
         <li> <a href="1.html">HTML</a><br></li>
         <li> <a href="2.html">CSS</a><br></li>
         <li> <a href="3.html">javaScript</a><br></li>
       </ol>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/7T7r_oSp0SE"
-frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-allowfullscreen></iframe>
+<div id="article">
       <h2>WEB이란 무엇인가?</h2>
       <strong>웹의 다른 뜻은 다음과 같다.
 웹(web)은 기본적으로 거미줄을 뜻한다.
@@ -29,15 +35,6 @@ allowfullscreen></iframe>
       <div id="disqus_thread"></div>
 <script>
 
-/**
-*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-/*
-var disqus_config = function () {
-this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-};
-*/
 (function() { // DON'T EDIT BELOW THIS LINE
 var d = document, s = d.createElement('script');
 s.src = 'https://web1-gydpbmlmy6.disqus.com/embed.js';
@@ -62,5 +59,7 @@ s0.parentNode.insertBefore(s1,s0);
 </script>
 <!--End of Tawk.to Script-->
     </p>
+    </div>
+    </div>
   </body>
 </html>
